--- a/water_finel.ipynb
+++ b/water_finel.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "file_path = \"C:/Users/Sigal/Desktop/water/water_data.csv\"  # הכנס את המיקום של קובץ הנתונים\n",
+    "file_path = \"C:/Users/Sigal/Desktop/water/water_data.csv\"  ,
     "data = pd.read_csv(file_path)"
    ]
   },
