--- a/water_finel.ipynb
+++ b/water_finel.ipynb
@@ -31,20 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 108,
    "id": "6d5133dd-359c-4618-80e9-0f2488953755",
    "metadata": {
     "id": "6d5133dd-359c-4618-80e9-0f2488953755"
    },
    "outputs": [],
    "source": [
-    "file_path = \"C:/Users/Sigal/Desktop/water/water_data.csv\", 
+    "file_path = \"C:/Users/Sigal/Desktop/water/water_data.csv\"  # הכנס את המיקום של קובץ הנתונים\n",
     "data = pd.read_csv(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 109,
    "id": "71a85ccc-dc11-40f5-8e12-d0ec76b9ef5b",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "(48798, 11)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
