--- a/water_finel.ipynb
+++ b/water_finel.ipynb
@@ -1,12 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "7420524e-ea94-4da7-a109-b806ebd01ddb",
+   "cell_type": "markdown",
+   "id": "6744b999-9160-429b-be71-62c13e79f806",
    "metadata": {
     "id": "7420524e-ea94-4da7-a109-b806ebd01ddb"
    },
+   "source": [
+    "## water-quality-analysis_project\n",
+    "#### Git Hub LINK- https://github.com/shiraz3389/water-quality-analysis_project\n",
+    "#### Names- Shiraz Hemo , Daniel Yesharim\n",
+    "\n",
+    "\n",
+    "* About\n",
+    "Analysis and prediction of water quality in Israel's streams using machine learning techniques. This project includes data preprocessing, feature engineering, clustering, and classification models to assess compliance with water quality standards."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9ba5f1db-5183-4aa0-adbb-510a08670a2b",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -31,20 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 17,
    "id": "6d5133dd-359c-4618-80e9-0f2488953755",
    "metadata": {
     "id": "6d5133dd-359c-4618-80e9-0f2488953755"
    },
    "outputs": [],
    "source": [
-    "file_path = \"C:/Users/Sigal/Desktop/water/water_data.csv\"  # הכנס את המיקום של קובץ הנתונים\n",
+    "file_path = \"C:/Users/Sigal/Desktop/water/water_data.csv\" \n",
     "data = pd.read_csv(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 18,
    "id": "71a85ccc-dc11-40f5-8e12-d0ec76b9ef5b",
    "metadata": {},
    "outputs": [
@@ -54,7 +68,7 @@
        "(48798, 11)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "id": "42aa8b28-66b2-4e42-9185-04de49dea0b4",
    "metadata": {},
    "outputs": [
@@ -78,7 +92,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "id": "f726e2e1-53c3-4805-b883-7090c8d47502",
    "metadata": {
     "editable": true,
@@ -153,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "id": "aff9167a-07cf-4372-9a59-9c77aca107d7",
    "metadata": {
     "id": "aff9167a-07cf-4372-9a59-9c77aca107d7"
@@ -166,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "id": "dd10caa5-381e-4190-81c5-c9ca09ebc514",
    "metadata": {
     "id": "dd10caa5-381e-4190-81c5-c9ca09ebc514",
@@ -202,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "id": "1f199c61-ce44-4370-8e02-1539135992d4",
    "metadata": {
     "id": "a87ad649-79eb-4e10-a793-17f36a4605a9"
@@ -227,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "id": "f974151a-3b5b-4c1c-835c-e256f6a7c18e",
    "metadata": {
     "id": "f974151a-3b5b-4c1c-835c-e256f6a7c18e",
@@ -274,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "id": "42cb593c-c7f6-40dc-b908-0ad4547883c6",
    "metadata": {
     "id": "42cb593c-c7f6-40dc-b908-0ad4547883c6",
@@ -332,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 26,
    "id": "b868da02-bdbc-4d31-b024-3b641378c847",
    "metadata": {
     "id": "b868da02-bdbc-4d31-b024-3b641378c847"
@@ -363,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "id": "87068985-89b6-4178-836e-f06200ec78ab",
    "metadata": {},
    "outputs": [],
@@ -388,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "id": "00ffe4e0-c99c-49f2-8834-0b7e670f17dc",
    "metadata": {
     "colab": {
@@ -501,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "id": "1c46142c-c727-48f4-bb31-5604b8d20475",
    "metadata": {},
    "outputs": [
@@ -542,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "id": "a65e475b-d4f6-48cd-a66a-8ff52c0cdd67",
    "metadata": {
     "colab": {
@@ -570,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "id": "cd054a15-2be8-4b55-b8bf-f74330da2ca1",
    "metadata": {},
    "outputs": [],
@@ -580,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 32,
    "id": "0d62f0ae-3a67-447a-8c76-e91ce5b7faa1",
    "metadata": {},
    "outputs": [
@@ -607,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 33,
    "id": "ac29058d-d2f0-4b05-8dce-2b467b5d75bc",
    "metadata": {
     "colab": {
@@ -621,7 +635,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sigal\\AppData\\Local\\Temp\\ipykernel_14740\\3754595428.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\Sigal\\AppData\\Local\\Temp\\ipykernel_19320\\3754595428.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -639,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "id": "a4f19b3f-ba40-48eb-88c3-3188c2a727b2",
    "metadata": {
     "id": "a4f19b3f-ba40-48eb-88c3-3188c2a727b2"
@@ -649,13 +663,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sigal\\AppData\\Local\\Temp\\ipykernel_14740\\224095674.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Sigal\\AppData\\Local\\Temp\\ipykernel_19320\\224095674.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  no_nulls_data['Year'] = pd.to_datetime(no_nulls_data['Date']).dt.year\n",
-      "C:\\Users\\Sigal\\AppData\\Local\\Temp\\ipykernel_14740\\224095674.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\Sigal\\AppData\\Local\\Temp\\ipykernel_19320\\224095674.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -680,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 35,
    "id": "b56c5a83-03d8-4767-86b8-cefe67cbf41c",
    "metadata": {},
    "outputs": [],
@@ -690,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 36,
    "id": "19b0ecb3-b883-45e9-bb92-cecdaea69eee",
    "metadata": {
     "colab": {
@@ -884,7 +898,7 @@
        "max      12.000000  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 37,
    "id": "0b058910-951e-4f5a-9752-d2e3aa76d345",
    "metadata": {
     "colab": {
@@ -1023,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "id": "508388f7-cc60-4190-a4df-1c8823c6261c",
    "metadata": {
     "id": "508388f7-cc60-4190-a4df-1c8823c6261c"
@@ -1055,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 39,
    "id": "18c37311-fa5e-4281-a5a8-35aa28821f9d",
    "metadata": {
     "colab": {
@@ -1105,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 40,
    "id": "8ec91819-4c90-4fa2-b251-5a7aef1d6a8f",
    "metadata": {
     "colab": {
@@ -1120,7 +1134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sigal\\AppData\\Local\\Temp\\ipykernel_14740\\3576395165.py:2: FutureWarning: \n",
+      "C:\\Users\\Sigal\\AppData\\Local\\Temp\\ipykernel_19320\\3576395165.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1162,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 41,
    "id": "169fc666-a18a-404a-87ce-5b60da0ca388",
    "metadata": {
     "colab": {
@@ -1206,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "id": "09a22d23-3ac3-4b51-bb55-3a6e7d073f6f",
    "metadata": {
     "colab": {
@@ -1249,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 43,
    "id": "d701615e-bece-4609-a5d2-f6dc82d4bb93",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 44,
    "id": "1596dae1-d736-4303-a328-a983672c6983",
    "metadata": {},
    "outputs": [
@@ -1333,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 45,
    "id": "ce1b429c-d89b-49dc-a310-e684ef709a5b",
    "metadata": {},
    "outputs": [
@@ -1373,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 46,
    "id": "04d31b17-a64c-4ed6-a393-2772ab2db04a",
    "metadata": {},
    "outputs": [
@@ -1394,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 47,
    "id": "4fa12922-2665-4664-b5bc-653816482b62",
    "metadata": {},
    "outputs": [
@@ -1454,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 48,
    "id": "d94f6a36-443a-4036-8c82-a302542d2515",
    "metadata": {
     "colab": {
@@ -1472,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 49,
    "id": "1e8c2d02-25ac-45fa-aa89-6eb123e864ed",
    "metadata": {
     "id": "1e8c2d02-25ac-45fa-aa89-6eb123e864ed"
@@ -1490,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 50,
    "id": "30c0215e-a29e-4a94-8b6b-a8be608c89b9",
    "metadata": {
     "colab": {
@@ -1585,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 51,
    "id": "f88dbf75-3723-4199-a298-f956cb67937b",
    "metadata": {},
    "outputs": [
@@ -1626,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 52,
    "id": "cfc80ca5-aef5-4c0d-8f31-10c02996c051",
    "metadata": {},
    "outputs": [
@@ -1699,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 53,
    "id": "c7e89112-7dbc-4bd2-8e62-70a82f92648e",
    "metadata": {},
    "outputs": [],
@@ -1710,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 54,
    "id": "55ad05c9-40b5-4f96-8d87-0cc92a8b6cef",
    "metadata": {},
    "outputs": [],
@@ -1731,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 55,
    "id": "ca3f33d4-9eed-484d-8e9f-a5efe1c4da0a",
    "metadata": {},
    "outputs": [
@@ -1783,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 56,
    "id": "fe7c900c-66a6-4f04-b093-61bcb281e9a3",
    "metadata": {},
    "outputs": [
@@ -1809,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 57,
    "id": "67fda3a9-99fd-4212-bb82-ddc5bd58efbf",
    "metadata": {},
    "outputs": [
@@ -1843,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 58,
    "id": "670006f4-7230-420d-93a8-0f2f6b77f53e",
    "metadata": {},
    "outputs": [
@@ -1896,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 59,
    "id": "dde4b8d1-adf4-40cc-a652-357e1e34d030",
    "metadata": {},
    "outputs": [
@@ -1944,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 60,
    "id": "e14186f3-9439-40ea-a0f0-f01f5fe88df4",
    "metadata": {},
    "outputs": [
@@ -1994,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 61,
    "id": "a5e5a70d-f699-459a-b45b-e26431e4222c",
    "metadata": {},
    "outputs": [
@@ -2047,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 62,
    "id": "0832c616-fdff-4791-95b2-465862867bef",
    "metadata": {
     "id": "0832c616-fdff-4791-95b2-465862867bef"
@@ -2066,7 +2080,7 @@
    ],
    "source": [
     "pca = PCA(n_components=2)\n",
-    "pca_data = pca.fit_transform(clustering_data_scaled)  # Use clustering_data_scaled instead of scaled_data\n",
+    "pca_data = pca.fit_transform(clustering_data_scaled)  \n",
     "\n",
     "fig, axes = plt.subplots(1, 3, figsize=(18, 6))\n",
     "\n",
@@ -2109,7 +2123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 63,
    "id": "889f3e10-a477-4911-866a-e8a86900ce39",
    "metadata": {},
    "outputs": [
@@ -2124,6 +2138,38 @@
    "source": [
     "pip freeze > requirements.txt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8aef245-dad8-43a2-8d81-cc13103693bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d08104a0-b36c-4d97-b52f-33e029942a7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86e31af3-1428-49d6-a985-896fe5d52cee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf5a4976-205d-4a59-8176-1dca4329c087",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
